--- a/vertx-samples/build.gradle
+++ b/vertx-samples/build.gradle
@@ -10,5 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile "io.vertx:vertx-redis-client:${vertxVersion}"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
