--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,24 @@ dependencies {
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
+allprojects {
+    apply plugin: "org.jetbrains.kotlin.jvm"
+    apply plugin: "org.jetbrains.dokka"
+
+    dependencies {
+        //kotlin
+        implementation("org.jetbrains.kotlin:kotlin-reflect")
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+        implementation "org.jetbrains.kotlin:kotlin-stdlib"
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+        //kotlin doc
+        dokkaHtmlPlugin("org.jetbrains.dokka:kotlin-as-java-plugin:1.5.0")
+
+        testImplementation(platform("org.junit:junit-bom:5.7.2"))
+        testImplementation("org.junit.jupiter:junit-jupiter")
+        testImplementation 'org.mockito:mockito-inline:3.12.4'
+    }
+}
 configurations {
     'org.projectlombok:lombok:1.18.16'
 }
