--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'blog-sample'
 include 'vertx4-transformer'
 include 'jdk-threadpool-transformer'
 include 'vertx-samples'
+include 'unit-test-sample'
 
