--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:1.2.3"
 
     implementation("io.vertx:vertx-core:${vertxVersion}")
-    compile "io.vertx:vertx-web:${vertxVersion}"
-    testCompile "io.vertx:vertx-web-client:${vertxVersion}"
+    implementation "io.vertx:vertx-web:${vertxVersion}"
+    testImplementation "io.vertx:vertx-web-client:${vertxVersion}"
 
     //spring
     implementation("org.springframework.boot:spring-boot-starter-web")
