--- a/jdk-threadpool-transformer/build.gradle
+++ b/jdk-threadpool-transformer/build.gradle
@@ -12,5 +12,5 @@ repositories {
 dependencies {
     implementation group: 'org.javassist', name: 'javassist', version: '3.27.0-GA'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
