--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 apply from: './version.gradle'
 
 group 'org.example'
-version '1.0-SNAPSHOT'
+version = new FileReader(file("version")).readLine()
 
 repositories {
     mavenCentral()
