--- a/notion-helper/build.gradle
+++ b/notion-helper/build.gradle
@@ -17,4 +17,13 @@ dependencies {
 
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.78'
 
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-io
+    implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
 }
