--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'vertx4-transformer'
 include 'jdk-threadpool-transformer'
 include 'vertx-samples'
 include 'unit-test-sample'
+include 'algorithms'
 
