--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'blog-sample'
 include 'vertx4-transformer'
 include 'jdk-threadpool-transformer'
+include 'jdk-sourcecode-samples'
 include 'vertx-samples'
 include 'unit-test-sample'
 include 'algorithms'
