--- a/mybatis-plus-samples/build.gradle
+++ b/mybatis-plus-samples/build.gradle
@@ -1,5 +1,9 @@
 plugins {
     id 'java'
+    id 'idea'
+    id 'org.jetbrains.kotlin.jvm'
+    id("org.springframework.boot")
+    id("io.spring.dependency-management")
 }
 
 group 'org.baichuan.sample'
@@ -10,13 +14,19 @@ repositories {
 }
 
 dependencies {
+    implementation("org.springframework.boot:spring-boot-starter")
+    implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("com.baomidou:mybatis-plus-boot-starter:3.4.2")
-    configurations {
+    /*configurations {
         implementation {
             exclude group: 'com.baomidou', module: 'mybatis-plus-core'
         }
-    }
-    implementation files("/Users/tk/IdeaProjects/tmp/mybatis-plus/mybatis-plus-core/build/libs/mybatis-plus-core-0.0.1.jar")
-    implementation files("/Users/tk/IdeaProjects/tmp/mybatis-plus/mybatis-plus-annotation/build/libs/mybatis-plus-annotation-0.0.1.jar")
+    }*/
+    implementation files("/Users/tk/IdeaProjects/tmp/mybatis-plus/mybatis-plus-core/build/libs/mybatis-plus-core-3.4.3.4.jar")
+    implementation files("/Users/tk/IdeaProjects/tmp/mybatis-plus/mybatis-plus-annotation/build/libs/mybatis-plus-annotation-3.4.3.4.jar")
     implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0")
+
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation(platform("org.junit:junit-bom:5.7.2"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
 }
